--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "The puzzle collector's blog"
+title                    : "My thought processes"
 title_separator          : "-"
 name                     : "Your Name"
 description              : "An amazing website."
