--- a/_config.yml
+++ b/_config.yml
@@ -106,11 +106,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Luke Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an amazing person."
-  location         : "Somewhere"
-  email            :
+  location         : "Palo Alto, CA"
+  email            : "mkim14@stanford.edu" 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
