--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ masthead_title           : # overrides the website title displayed in the masthe
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+  provider               : "facebook" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
     shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Luke Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Stanford Math Major. Interested in problem solving, Statistics, Game development and Hacking."
+  bio              : "Stanford Math Major and problem solver"
   location         : "Palo Alto, CA"
   email            : "mkim14@stanford.edu" 
   links:
@@ -293,6 +293,8 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: true
+      
+      
+      s: true
       share: true
       related: true
