--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Luke Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Stanford Math Major and problem solver"
+  bio              : "Problem Solver, studying Mathematics and Computer Science"
   location         : "Palo Alto, CA"
   email            : "mkim14@stanford.edu" 
   links:
