--- a/_config.yml
+++ b/_config.yml
@@ -108,8 +108,8 @@ analytics:
 author:
   name             : "Luke Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Problem Solver. Stanford Math major"
-  location         : "Stanford, CA"
+  bio              : "Problem Solver. Stanford Mathematics major"
+  location         : "Palo Alto, CA"
   email            : "mkim14@stanford.edu" 
   links:
     - label: "Email"
