--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Luke Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Problem Solver. Stanford Mathematics major"
+  bio              : "Problem Solver. Stanford Mathematics major. Just Curious"
   location         : "Palo Alto, CA"
   email            : "mkim14@stanford.edu" 
   links:
