--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Luke Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Hey there! I'm a Stanford Mathematics major."
+  bio              : "Hey there! I'm a Stanford Mathematics major. Trying to become smarter everyday."
   location         : "Palo Alto, CA"
   email            : "mkim14@stanford.edu" 
   links:
